--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
